name:                wai-rpc
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable wai-rpc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       http-types, wai, warp
